# CLF3

./: .gitignore  Cargo.toml  GAMEPLAN.md  HIVE_PLAN.md  PLAN-missing-content-fix.md  README.md  REVAMP_PLAN.md  fomod-plus-settings.ini  plan.md
.github/workflows/: build.yml
docs/: SESSION_NOTES.md  TODO_PERFORMANCE.md  UNIFICATION_PLAN.md
docs/architecture/: PROGRESS_REPORTING_PLAN.md  STREAMING_PIPELINE_DESIGN.md
docs/changes/: PHASE1_ARCHIVE_FILE_ENTRY.md  PHASE1_WRAPPER_REMOVAL.md  PHASE2_DATABASE_UNIFICATION.md  PHASE3_DOWNLOAD_UNIFICATION.md
src/: browser_gui.rs  error.rs  fluorine.rs  fnv4gb.rs  gpu.rs  hash.rs  lib.rs  main.rs  nxm_handler.rs  octodiff.rs  paths.rs  self_update.rs  settings.rs
src/archive/: mod.rs  sevenzip.rs
src/bsa/: ba2_reader.rs  ba2_writer.rs  cache.rs  mod.rs  reader.rs  tes3_reader.rs  writer.rs
src/collection/: archive.rs  db.rs  download.rs  extract.rs  fetch.rs  gallery.rs  install.rs  installer.rs  mod.rs  modlist.rs  patches.rs  post_install.rs  root_files.rs  types.rs  verify.rs
src/collection/fomod/: encoding.rs  executor.rs  mod.rs  parser.rs
src/downloaders/: google_drive.rs  http.rs  loverslab.rs  mediafire.rs  mega_native.rs  mod.rs  nexus.rs  wabbajack_cdn.rs  yandex.rs
src/error/: codes.rs  messages.en.json  messages.rs
src/file_router/: mod.rs  mod_types.rs  patterns.rs
src/game_finder/: heroic.rs  known_games.rs  mod.rs  proton.rs  steam.rs
src/games/: mod.rs
src/gui/: download_view.slint  image_cache.rs  mod.rs  settings.rs
src/installer/: bsa_reuse.rs  config.rs  config_cache.rs  downloader.rs  extract_strategy.rs  game_preflight.rs  manual_controller.rs  mod.rs  pipeline.rs  prevalidation.rs  processor.rs  progress.rs  progress_cli.rs  progress_jackify.rs  progress_json.rs  sidecar.rs  streaming.rs  thread_budget.rs  verify.rs
src/installer/handlers/: create_bsa.rs  from_archive.rs  inline.rs  mod.rs  patched.rs  texture.rs
src/loot/: mod.rs
src/mo2/: downloader.rs  ini.rs  mod.rs  stock_game.rs
src/modlist/: browser.rs  db.rs  install_manifest.rs  mod.rs  types.rs  update.rs
src/nak/: mod.rs
src/textures/: gpu_encoder.rs  mod.rs  processor.rs
src/ttw/: mod.rs
tests/unit/: test_error_messages.rs
