[package]
name = "clf3"
version = "0.0.1"
edition = "2021"
description = "Wabbajack modlist installer for Linux"
license = "MIT"
repository = "https://github.com/SulfurNitride/CLF3"

[lib]
name = "clf3"
path = "src/lib.rs"

[[bin]]
name = "clf3"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Compression/Archives
# Note: zip crate is required for reading .wabbajack files (which are ZIP archives)
# 7z binary is used for mod archive extraction (ZIP, 7z, RAR)
zip = "7.2"
flate2 = "1.1"

# BSA/BA2 archives
ba2 = "3.0.1"

# Parallelism
rayon = "1.11.0"
crossbeam-channel = "0.5"

# System info (memory monitoring)
sysinfo = "0.38.0"

# DDS/Texture processing
image_dds = "0.7.2"
image = "0.25.9"
directxtex = "1.3.0"

# HTTP client
reqwest = { version = "0.13.1", features = ["stream", "cookies", "json"] }
futures = "0.3.31"

# Date/time
chrono = { version = "0.4.43", features = ["serde"] }

# HTML/URL parsing
regex = "1.12.2"
scraper = "0.25.0"
serde_urlencoded = "0.7.1"

# Utilities
uuid = { version = "1.20", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
binrw = "0.15.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"

# File utilities
walkdir = "2.5"
tempfile = "3.24"
memmap2 = "0.9"
reflink-copy = "0.1.28"

# NXM handler server
axum = "0.8.8"
tokio-stream = "0.1.18"

# Collection support (FOMOD/XML parsing)
quick-xml = "0.39"
encoding_rs = "0.8.35"

# Hashing
md5 = "0.7"

# Plugin sorting (LOOT)
libloot = "0.28.4"

# Graph algorithms (for mod ordering)
petgraph = "0.8.3"
dirs = "6.0.0"

# GUI
slint = "1.14.1"
rfd = "0.17"

# Lazy initialization for static channel
once_cell = "1.19"

[dev-dependencies]
# tempfile also in main dependencies now
