[package]
name = "clf3"
version = "0.0.6"
edition = "2021"
description = "Wabbajack modlist installer for Linux"
license = "MIT"
repository = "https://github.com/SulfurNitride/CLF3"

[lib]
name = "clf3"
path = "src/lib.rs"

[[bin]]
name = "clf3"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Compression/Archives
# zip: reading .wabbajack files + native ZIP extraction
# sevenz-rust2: native 7z extraction (pure Rust, multi-threaded LZMA2)
# unrar: native RAR extraction (FFI to unrar library)
# 7z binary used as fallback for RAR if needed
zip = "7.2"
sevenz-rust2 = "0.20"
unrar = "0.5"
flate2 = "1.1"
tar = "0.4"

# BSA/BA2 archives
ba2 = "3.0.1"

# Parallelism
rayon = "1.11.0"

# System info (memory monitoring)
sysinfo = "0.38.0"

# DDS/Texture processing
image_dds = "0.7.2"
image = "0.25.9"
directxtex = "1.3.0"

# GPU acceleration
wgpu = "28.0"
block_compression = { version = "0.8", features = ["wgpu", "bc7"] }
pollster = "0.4"

# HTTP client
reqwest = { version = "0.13.1", features = ["stream", "cookies", "json", "blocking"] }
futures = "0.3.31"

# Date/time
chrono = { version = "0.4.43", features = ["serde"] }

# HTML/URL parsing
regex = "1.12.2"
scraper = "0.25.0"
serde_urlencoded = "0.7.1"

# Utilities
uuid = { version = "1.20", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
binrw = "0.15.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"

# File utilities
walkdir = "2.5"
tempfile = "3.24"
memmap2 = "0.9"
reflink-copy = "0.1.28"
which = "8.0"

# Collection support (FOMOD/XML parsing)
quick-xml = "0.39"
encoding_rs = "0.8.35"

# Hashing
md5 = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
base64 = "0.22"

dirs = "6.0.0"

# GUI
slint = "1.14.1"
rfd = "0.17"

# Lazy initialization for static channel
once_cell = "1.19"

# Unicode normalization (for path matching with accented characters)
unicode-normalization = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
# tempfile also in main dependencies now
